# Minecraft

./: build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
Gradle/: libs.versions.toml
Minecraft/: build.gradle.kts  build.gradle.kts.bak  proguard-rules.pro
Minecraft/Source/Main/: AndroidManifests.xml
Minecraft/Source/Main/Kotlin/com/omni/craft/: Activity.kt  Engine.kt  Render.kt
Minecraft/Source/Main/Native/: CMakeLists.txt  Core.cpp
Minecraft/Source/Main/Res/values/: strings.xml
